<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/PopupOverlay"/>

    <com.google.android.material.transformation.TransformationChildCard
        android:id="@+id/card_profile_activity"
        app:layout_constraintTop_toBottomOf="@id/tb_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="100dp"
        android:elevation="20dp"
        app:cardCornerRadius="@dimen/cardview_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="80dp"
            android:elevation="20dp"
            android:paddingBottom="80dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_user_place_holder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/et_name"
                android:layout_marginBottom="50dp"
                android:layout_margin="50dp" />
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_profile"
                android:layout_margin="20dp"
                android:background="@drawable/shape_dialog_rounded"
                android:textSize="18sp"
                android:hint="@string/name"
                android:textColorHint="@color/PrimaryTextColor"
                android:padding="8dp"
                android:textColor="@color/PrimaryTextColor"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_name"
                android:layout_margin="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textEmailAddress"
                android:background="@drawable/shape_dialog_rounded"
                android:textSize="18sp"
                android:hint="@string/email"
                android:textColorHint="@color/SecondaryTextColor"
                android:padding="8dp"
                android:textColor="@color/PrimaryTextColor"/>
            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                android:layout_margin="20dp"
                android:background="@drawable/shape_dialog_rounded"
                android:textSize="18sp"
                android:hint="@string/mobile"
                android:textColorHint="@color/PrimaryTextColor"
                android:padding="8dp"
                android:textColor="@color/PrimaryTextColor"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_mobile"
                android:background="@drawable/shape_button_rounded"
                android:layout_margin="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="8dp"
                android:text="Update"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.transformation.TransformationChildCard>




</androidx.constraintlayout.widget.ConstraintLayout>