<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="@dimen/task_item_cv_elevation">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_task_List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_addTaskList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add List"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textSize="@dimen/task_item_add_item_text_size"
            android:padding="12dp"
            android:visibility="gone"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="?attr/selectableItemBackground"
            tools:visibility="visible"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add_task_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_addTaskList"
            android:layout_margin="@dimen/task_item_cv_margin"
            android:elevation="@dimen/task_item_cv_elevation"
            app:cardCornerRadius="@dimen/task_item_cv_corner_radius"
            android:visibility="gone"
            tools:visibility="visible">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <ImageButton
                    android:id="@+id/ib_close_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription"
                    android:padding="@dimen/task_item_image_buttons_padding"
                    android:src="@drawable/ic_cancel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <EditText
                    android:id="@+id/et_task_list_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/hint_list_name"
                    android:hint="@string/hint_list_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    app:layout_constraintStart_toEndOf="@id/ib_close_list_name"
                    app:layout_constraintEnd_toStartOf="@id/ib_done_list_name"
                    android:gravity="start"
                    app:layout_constraintTop_toTopOf="parent"/>
                <ImageButton
                    android:id="@+id/ib_done_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription"
                    android:padding="@dimen/task_item_image_buttons_padding"
                    android:src="@drawable/ic_done"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/et_task_list_name"
                    app:layout_constraintTop_toTopOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_task_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cv_add_task_list_name">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/tv_task_list_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/task_item_title_text_size"
                    android:padding="@dimen/task_list_content_padding"
                    tools:text="Title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ib_edit_list_name"
                    android:gravity="start"/>
                <ImageButton
                    android:id="@+id/ib_edit_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription"
                    android:padding="@dimen/task_item_image_buttons_padding"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintEnd_toStartOf="@+id/ib_delete_list"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageButton
                    android:id="@+id/ib_delete_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_contentDescription"
                    android:padding="@dimen/task_item_image_buttons_padding"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/task_item_divider_height"
                android:background="@color/DividerColor"
                app:layout_constraintTop_toBottomOf="@id/cl_title_view"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_card_list"
                android:layout_margin="@dimen/task_item_cv_margin"
                android:elevation="@dimen/task_item_cv_elevation"
                app:cardCornerRadius="@dimen/task_item_cv_corner_radius"
                android:visibility="gone"
                tools:visibility="visible">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <ImageButton
                        android:id="@+id/ib_close_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:src="@drawable/ic_cancel"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <EditText
                        android:id="@+id/et_card_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="@string/hint_list_name"
                        android:hint="@string/hint_card_name"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        app:layout_constraintStart_toEndOf="@id/ib_close_card_name"
                        app:layout_constraintEnd_toStartOf="@id/ib_done_card_name"
                        android:gravity="start"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <ImageButton
                        android:id="@+id/ib_done_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:src="@drawable/ic_done"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/et_card_name"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_card_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/task_item_rv_card_list_margin"
                app:layout_constraintTop_toBottomOf="@+id/cv_edit_task_list_name"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_edit_task_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cl_title_view"
                android:layout_margin="@dimen/task_item_cv_margin"
                android:elevation="@dimen/task_item_cv_elevation"
                app:cardCornerRadius="@dimen/task_item_cv_corner_radius"
                android:visibility="gone"
                tools:visibility="visible">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <ImageButton
                        android:id="@+id/ib_close_editable_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:src="@drawable/ic_cancel"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <EditText
                        android:id="@+id/et_edit_task_list_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="@string/hint_list_name"
                        android:hint="@string/hint_list_name"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        app:layout_constraintStart_toEndOf="@id/ib_close_editable_view"
                        app:layout_constraintEnd_toStartOf="@id/ib_done_edit_list_name"
                        android:gravity="start"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <ImageButton
                        android:id="@+id/ib_done_edit_list_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image_contentDescription"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:src="@drawable/ic_done"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/et_edit_task_list_name"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/task_list_action_color"
                android:elevation="@dimen/task_item_add_card_text_elevation"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/task_item_add_item_text_padding"
                android:text="@string/action_add_card"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/task_item_add_item_text_size"
                tools:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/cv_add_card"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>